--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ book:
   chapters:
     - index.qmd
     - references.qmd
+    - notice.qmd
     - 01-data-science-applications.qmd
     - fexibility.qmd
     - courses-in-the-program.qmd
