--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,12 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+      - name: Install TinyTeX (for PDF rendering)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget
+          wget -qO- "https://yihui.org/tinytex/install-bin-unix.sh" | sh
+          echo "$HOME/bin" >> $GITHUB_PATH
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
