--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,10 +18,8 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
       - name: Install TinyTeX (for PDF rendering)
         run: |
-          sudo apt-get update
-          sudo apt-get install -y wget
-          wget -qO- "https://yihui.org/tinytex/install-bin-unix.sh" | sh
-          echo "$HOME/bin" >> $GITHUB_PATH
+          # Install TinyTeX via Quarto
+          quarto install tinytex
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
