commenting biblography beacause i am not using it anywehere will enable it later

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,7 +34,7 @@ book:
       chapters:
         - 13-learning-paths-available.qmd
 
-bibliography: references.bib
+#bibliography: references.bib
 
 format:
   html:
