--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,17 +27,15 @@ book:
     - 01-data-science-applications.qmd
     - 02-fexibility.qmd
     - 03-courses-in-the-program.qmd
-    - fees-entire-program.qmd
-    
+    - 04-fees-entire-program.qmd
     - 13-learning-paths-available.qmd
     - 17-pgd-mtech-upgrade-path.qmd
-    - 18-apprenticeship-in-the-BS-level.qmd
+    - 18-apprenticeship-in-the-bs-level.qmd
     - 19-software-hardware-requirements.qmd
     - 20-non-academic-rules.qmd
-    
     - part: "Appendices"
       chapters:
-        - 13-learning-paths-available.qmd
+        - dummy.qmd
 
 bibliography: references.bib
 
