feat: add sections 5, 6, and 7 with Bootstrap-styled tables
- Integrated Bootstrap styling for tables in sections 5, 6, and 7.
- Note: Bootstrap usage per file needs to be monitored for consistency and potential cleanup.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,9 @@ book:
     - 02-fexibility.qmd
     - 03-courses-in-the-program.qmd
     - 04-fees-entire-program.qmd
+    - 05-admissions-to-the-program.qmd
+    - 06-credit-clearing-capability.qmd
+    - 07-course-registration.qmd
     - 11_design_certificates_levels_program.qmd
     - 13-learning-paths-available.qmd
     - 17-pgd-mtech-upgrade-path.qmd
